[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salsa-utils"
version = "0.1.0"
authors = [
  {name="Alina Cherkas"},
]
maintainers = [
  {name="Alina Cherkas"},
]
description = "Utilities for working with the Selection of Adjusted Litter Scene Annotations (SALSA) dataset."
readme = "README.md"
license = {text = "Apache License 2.0"}
requires-python = ">=3.7"
dependencies = [
  "PyYAML>=6.0",
  "tqdm>=4.66"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
keywords = ["computer vision", "object detection", "litter", "dataset", "utilities"]

[project.urls]
"Homepage" = "https://github.com/alinacherkas/salsa"
"Bug Tracker" = "https://github.com/alinacherkas/salsa/issues"
